--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-dj-database-url==0.5.0
-Django==3.0.6
-gunicorn==20.0.4
-psycopg2==2.8.5
-whitenoise==5.1.0
-requests==2.23.0
+asgiref==3.3.4
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.2
+idna==2.10
+mysql-client==0.0.1
+mysqlclient==2.0.3
+pytz==2021.1
+requests==2.25.1
+sqlparse==0.4.1
+urllib3==1.26.4
